fixed light switch overflow and added some css

--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -157,6 +157,13 @@ div.def div.move{
 }
 section>div.ui-collapsible-content{
 	text-align: center;
+	line-height: 1em;
+}
+section div.endofsection{
+	width: 100%;
+	height: 0;
+	display: inline-block;
+	position: relative;
 }
 
 @media all and (min-width: 800px) {
