--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -113,7 +113,7 @@ div[data-role="lightdimmer"] img{
 div[data-role="lightdimmer"] p{
 	position: absolute;
 	margin-left: 54px;
-	margin-top: 2px;
+	margin-top: 5px;
 	font-weight: 700;
 }
 div[data-role="lightdimmer"] .ui-slider{
@@ -161,7 +161,7 @@ div[data-role="shading"] .close img{
 div[data-role="shading"] p{
 	position: absolute;
 	margin-left: 54px;
-	margin-top: 2px;
+	margin-top: 5px;
 	font-weight: 700;
 }
 div[data-role="shading"] .ui-slider{
